--- a/Views/CatalogDetails/CatalogDetails.cshtml
+++ b/Views/CatalogDetails/CatalogDetails.cshtml
@@ -146,7 +146,7 @@
                     </div>
                     <div class="details-container-data-row-filled">
                         <span>Прайс (£):</span>
-                        <span>@Model.CatalogPosition.BasePrice £</span>
+                        <span>@Model.CatalogPosition.BasePrice.ToString("0.00") £</span>
                     </div>
                     <div class="details-container-data-row">
                         <span>Тип обладнання:</span>
