--- a/Views/OrderEquipmentDetails/OrderEquipmentDetails.cshtml
+++ b/Views/OrderEquipmentDetails/OrderEquipmentDetails.cshtml
@@ -372,7 +372,7 @@
                     {
                         <div class="details-container-data-row-filled">
                             <span>Прайс (£):</span>
-                            <span>@Model.OrderPosition.BasePrice £</span>
+                            <span>@Model.OrderPosition.BasePrice.ToString("0.00") £</span>
                         </div>
                         <div class="details-container-data-row">
                             <span>Вага (кг):</span>
