--- a/Views/Shared/_Pagination.cshtml
+++ b/Views/Shared/_Pagination.cshtml
@@ -112,11 +112,11 @@
                             {
                                 SearchGeneral = model.SearchGeneral,
                                 SearchName = model.SearchName,
-                                SearchCountry = model.SearchCountry,
+                                SearchStreet = model.SearchStreet,
                                 SearchRegion = model.SearchRegion,
                                 SearchCity = model.SearchCity,
                                 SortAlphabetCity = model.SortAlphabetCity,
-                                SortAlphabetCountry = model.SortAlphabetCountry,
+                                SortAlphabetStreet = model.SortAlphabetStreet,
                                 SortEnterpriseId = model.SortEnterpriseId,
                                 SortAlphabetRegion = model.SortAlphabetRegion,
                                 CurrentPage = page,
