--- a/Views/Shared/_Pagination.cshtml
+++ b/Views/Shared/_Pagination.cshtml
@@ -151,7 +151,7 @@
                                 FilterMinVolume = model.FilterMinVolume,
                                 FilterMaxVolume = model.FilterMaxVolume,
                                 SearchEquipmentCode = model.SearchEquipmentCode,
-                                SearchNameEN = model.SearchNameEN,
+                                SearchName = model.SearchName,
                                 SortCode = model.SortCode,
                                 SortAlphabetNameEN = model.SortAlphabetNameEN,
                                 SortPrice = model.SortPrice,
